// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gauge Chart - Theme Change Should reflect theme change 1`] = `
<div>
  <div
    class="fui-FluentProvider fui-FluentProvider85"
    dir="ltr"
  >
    <div
      class="fui-gc__root"
      data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    >
      <svg
        aria-label="Gauge chart with 3 segments. "
        class="fui-gc__chart"
        role="region"
      >
        <g
          transform="translate(126, 88)"
        >
          <text
            aria-label="Min value: 0"
            class="fui-gc__limits"
            role="img"
            text-anchor="end"
            x="-74"
            y="0"
          >
            0
          </text>
          <text
            aria-label="Max value: 99"
            class="fui-gc__limits"
            role="img"
            text-anchor="start"
            x="74"
            y="0"
          >
            99
          </text>
          <path
            aria-label="Low Risk, 0 to 32"
            class="fui-gc__segment"
            d="M-69.993,-1A70,70,0,0,1,-37.752,-58.948L-29.315,-45.35A54,54,0,0,0,-53.991,-1Z"
            data-is-focusable="true"
            fill="#107c10"
            opacity="1"
            role="img"
            stroke-width="0"
            tabindex="0"
          />
          <path
            aria-label="Medium Risk, 32 to 66"
            class="fui-gc__segment"
            d="M-36.052,-60.002A70,70,0,0,1,34.13,-61.116L26.129,-47.257A54,54,0,0,0,-27.616,-46.405Z"
            data-is-focusable="true"
            fill="#f7630c"
            opacity="1"
            role="img"
            stroke-width="0"
            tabindex="0"
          />
          <path
            aria-label="High Risk, 66 to 99"
            class="fui-gc__segment"
            d="M35.862,-60.116A70,70,0,0,1,69.993,-1L53.991,-1A54,54,0,0,0,27.861,-46.257Z"
            data-is-focusable="true"
            fill="#c50f1f"
            opacity="1"
            role="img"
            stroke-width="0"
            tabindex="0"
          />
          <g
            transform="rotate(54.54545454545455, 0, 0)"
          >
            <path
              aria-label="Current value: 30%"
              class="fui-gc__needle"
              d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
              data-is-focusable="true"
              role="img"
              stroke-width="2"
              transform="translate(-52)"
            />
          </g>
          <g>
            <text
              aria-describedby="tooltip-87"
              aria-hidden="true"
              class="fui-gc__chartValue"
              font-size="24"
              id="tooltip-host86"
              text-anchor="middle"
              x="0"
              y="0"
            >
              ...
            </text>
            <span
              hidden=""
            />
          </g>
        </g>
      </svg>
      <div>
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="fui-legend__root"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
        >
          <div
            class="fui-Overflow fui-legend__resizableArea"
            style="text-align: center;"
          >
            <button
              aria-label="Low Risk"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
              />
              <div
                class="fui-legend__text"
              >
                Low Risk
              </div>
            </button>
            <button
              aria-label="Medium Risk"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
              />
              <div
                class="fui-legend__text"
              >
                Medium Risk
              </div>
            </button>
            <button
              aria-label="High Risk"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
              />
              <div
                class="fui-legend__text"
              >
                High Risk
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gauge bar chart re-rendering Should re-render the Gauge chart with data 1`] = `
Array [
  <button
    aria-label="Low Risk"
    aria-selected="false"
    class="fui-Button fui-legend__legend"
    data-overflow-item=""
    role="option"
    style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
    type="button"
  >
    <div
      class="fui-legend__rect"
      style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
    />
    <div
      class="fui-legend__text"
    >
      Low Risk
    </div>
  </button>,
  <button
    aria-label="Medium Risk"
    aria-selected="false"
    class="fui-Button fui-legend__legend"
    data-overflow-item=""
    role="option"
    style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
    type="button"
  >
    <div
      class="fui-legend__rect"
      style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
    />
    <div
      class="fui-legend__text"
    >
      Medium Risk
    </div>
  </button>,
  <button
    aria-label="High Risk"
    aria-selected="false"
    class="fui-Button fui-legend__legend"
    data-overflow-item=""
    role="option"
    style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
    type="button"
  >
    <div
      class="fui-legend__rect"
      style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
    />
    <div
      class="fui-legend__text"
    >
      High Risk
    </div>
  </button>,
]
`;

exports[`Gauge chart - Subcomponent Legend Should reduce the opacity of the other segments and legends on mouse click on a legend 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-74"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="74"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-69.993,-1A70,70,0,0,1,-37.752,-58.948L-29.315,-45.35A54,54,0,0,0,-53.991,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-36.052,-60.002A70,70,0,0,1,34.13,-61.116L26.129,-47.257A54,54,0,0,0,-27.616,-46.405Z"
          data-is-focusable="false"
          fill="#f7630c"
          opacity="0.1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M35.862,-60.116A70,70,0,0,1,69.993,-1L53.991,-1A54,54,0,0,0,27.861,-46.257Z"
          data-is-focusable="false"
          fill="#c50f1f"
          opacity="0.1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-52)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-50"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="24"
            id="tooltip-host49"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div>
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="true"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: var(--colorNeutralBackground1); --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, var(--colorNeutralBackground1), var(--colorNeutralBackground1)); --rect-opacity-high-contrast: 0.6;"
            />
            <div
              class="fui-legend__text"
              style="opacity: 0.67;"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: var(--colorNeutralBackground1); --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, var(--colorNeutralBackground1), var(--colorNeutralBackground1)); --rect-opacity-high-contrast: 0.6;"
            />
            <div
              class="fui-legend__text"
              style="opacity: 0.67;"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gauge chart - Subcomponent Legend Should reduce the opacity of the other segments and legends on mouse over a legend 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-74"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="74"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-69.993,-1A70,70,0,0,1,-37.752,-58.948L-29.315,-45.35A54,54,0,0,0,-53.991,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-36.052,-60.002A70,70,0,0,1,34.13,-61.116L26.129,-47.257A54,54,0,0,0,-27.616,-46.405Z"
          data-is-focusable="false"
          fill="#f7630c"
          opacity="0.1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M35.862,-60.116A70,70,0,0,1,69.993,-1L53.991,-1A54,54,0,0,0,27.861,-46.257Z"
          data-is-focusable="false"
          fill="#c50f1f"
          opacity="0.1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-52)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-46"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="24"
            id="tooltip-host45"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div>
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: var(--colorNeutralBackground1); --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, var(--colorNeutralBackground1), var(--colorNeutralBackground1)); --rect-opacity-high-contrast: 0.6;"
            />
            <div
              class="fui-legend__text"
              style="opacity: 0.67;"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: var(--colorNeutralBackground1); --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, var(--colorNeutralBackground1), var(--colorNeutralBackground1)); --rect-opacity-high-contrast: 0.6;"
            />
            <div
              class="fui-legend__text"
              style="opacity: 0.67;"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gauge chart interactions Should hide callout on mouse leave 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    style="--tabster-groupper: unlimited;"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-74"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="74"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-69.993,-1A70,70,0,0,1,-37.752,-58.948L-29.315,-45.35A54,54,0,0,0,-53.991,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-36.052,-60.002A70,70,0,0,1,34.13,-61.116L26.129,-47.257A54,54,0,0,0,-27.616,-46.405Z"
          data-is-focusable="true"
          fill="#f7630c"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M35.862,-60.116A70,70,0,0,1,69.993,-1L53.991,-1A54,54,0,0,0,27.861,-46.257Z"
          data-is-focusable="true"
          fill="#c50f1f"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-52)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-28"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="24"
            id="tooltip-host27"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div>
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
            />
            <div
              class="fui-legend__text"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
            />
            <div
              class="fui-legend__text"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout30"
    >
      <div
        class="fui-PopoverSurface"
        data-tabster="{\\"restorer\\":{\\"type\\":0}}"
        role="group"
        style="position: fixed; left: 0px; top: 0px; margin: 0px;"
      >
        <div
          class="fui-gc__calloutContentRoot"
        >
          <div
            class="fui-gc__calloutDateTimeContainer"
          >
            <div
              class="fui-gc__calloutContentX"
              data-is-focusable="false"
              role="text"
            >
              Current value is 30/99
            </div>
          </div>
          <div>
            <div
              data-is-focusable="false"
              role="text"
            >
              <div>
                <div
                  class="fui-gc__calloutBlockContainer"
                  id="0_0 - 32"
                  style="border-left: 4px solid #107c10;"
                >
                  <div>
                    <div
                      class="fui-gc__calloutlegendText"
                    >
                       
                      Low Risk
                    </div>
                    <div
                      class="fui-gc__calloutContentY"
                    >
                      0 - 32
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-is-focusable="false"
              role="text"
            >
              <div>
                <div
                  class="fui-gc__calloutBlockContainer"
                  id="1_32 - 66"
                  style="border-left: 4px solid #f7630c;"
                >
                  <div>
                    <div
                      class="fui-gc__calloutlegendText"
                    >
                       
                      Medium Risk
                    </div>
                    <div
                      class="fui-gc__calloutContentY"
                    >
                      32 - 66
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-is-focusable="false"
              role="text"
            >
              <div>
                <div
                  class="fui-gc__calloutBlockContainer"
                  id="2_66 - 99"
                  style="border-left: 4px solid #c50f1f;"
                >
                  <div>
                    <div
                      class="fui-gc__calloutlegendText"
                    >
                       
                      High Risk
                    </div>
                    <div
                      class="fui-gc__calloutContentY"
                    >
                      66 - 99
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gauge chart interactions Should hide callout on mouse leave 2`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    style="--tabster-groupper: unlimited;"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-74"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="74"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-69.993,-1A70,70,0,0,1,-37.752,-58.948L-29.315,-45.35A54,54,0,0,0,-53.991,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-36.052,-60.002A70,70,0,0,1,34.13,-61.116L26.129,-47.257A54,54,0,0,0,-27.616,-46.405Z"
          data-is-focusable="true"
          fill="#f7630c"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M35.862,-60.116A70,70,0,0,1,69.993,-1L53.991,-1A54,54,0,0,0,27.861,-46.257Z"
          data-is-focusable="true"
          fill="#c50f1f"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-52)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-28"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="24"
            id="tooltip-host27"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div>
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
            />
            <div
              class="fui-legend__text"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
            />
            <div
              class="fui-legend__text"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gauge chart interactions Should not show callout on mouse over when hideTooltip is true 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-74"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="74"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-69.993,-1A70,70,0,0,1,-37.752,-58.948L-29.315,-45.35A54,54,0,0,0,-53.991,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-36.052,-60.002A70,70,0,0,1,34.13,-61.116L26.129,-47.257A54,54,0,0,0,-27.616,-46.405Z"
          data-is-focusable="true"
          fill="#f7630c"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M35.862,-60.116A70,70,0,0,1,69.993,-1L53.991,-1A54,54,0,0,0,27.861,-46.257Z"
          data-is-focusable="true"
          fill="#c50f1f"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-52)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-24"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="24"
            id="tooltip-host23"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div>
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
            />
            <div
              class="fui-legend__text"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
            />
            <div
              class="fui-legend__text"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gauge chart interactions Should show callout on focus 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    style="--tabster-groupper: unlimited;"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-74"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="74"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-69.993,-1A70,70,0,0,1,-37.752,-58.948L-29.315,-45.35A54,54,0,0,0,-53.991,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="2"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-36.052,-60.002A70,70,0,0,1,34.13,-61.116L26.129,-47.257A54,54,0,0,0,-27.616,-46.405Z"
          data-is-focusable="true"
          fill="#f7630c"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M35.862,-60.116A70,70,0,0,1,69.993,-1L53.991,-1A54,54,0,0,0,27.861,-46.257Z"
          data-is-focusable="true"
          fill="#c50f1f"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-52)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-34"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="24"
            id="tooltip-host33"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div>
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
            />
            <div
              class="fui-legend__text"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
            />
            <div
              class="fui-legend__text"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout36"
    >
      <div
        class="fui-PopoverSurface"
        data-tabster="{\\"restorer\\":{\\"type\\":0}}"
        role="group"
        style="position: fixed; left: 0px; top: 0px; margin: 0px;"
      >
        <div
          class="fui-gc__calloutContentRoot"
        >
          <div
            class="fui-gc__calloutDateTimeContainer"
          >
            <div
              class="fui-gc__calloutContentX"
              data-is-focusable="false"
              role="text"
            >
              Current value is 30/99
            </div>
          </div>
          <div>
            <div
              data-is-focusable="false"
              role="text"
            >
              <div>
                <div
                  class="fui-gc__calloutBlockContainer"
                  id="0_0 - 32"
                  style="border-left: 4px solid #107c10;"
                >
                  <div>
                    <div
                      class="fui-gc__calloutlegendText"
                    >
                       
                      Low Risk
                    </div>
                    <div
                      class="fui-gc__calloutContentY"
                    >
                      0 - 32
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-is-focusable="false"
              role="text"
            >
              <div>
                <div
                  class="fui-gc__calloutBlockContainer"
                  id="1_32 - 66"
                  style="border-left: 4px solid #f7630c;"
                >
                  <div>
                    <div
                      class="fui-gc__calloutlegendText"
                    >
                       
                      Medium Risk
                    </div>
                    <div
                      class="fui-gc__calloutContentY"
                    >
                      32 - 66
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-is-focusable="false"
              role="text"
            >
              <div>
                <div
                  class="fui-gc__calloutBlockContainer"
                  id="2_66 - 99"
                  style="border-left: 4px solid #c50f1f;"
                >
                  <div>
                    <div
                      class="fui-gc__calloutlegendText"
                    >
                       
                      High Risk
                    </div>
                    <div
                      class="fui-gc__calloutContentY"
                    >
                      66 - 99
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gauge chart interactions Should show callout on mouse over 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    style="--tabster-groupper: unlimited;"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-74"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="74"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-69.993,-1A70,70,0,0,1,-37.752,-58.948L-29.315,-45.35A54,54,0,0,0,-53.991,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-36.052,-60.002A70,70,0,0,1,34.13,-61.116L26.129,-47.257A54,54,0,0,0,-27.616,-46.405Z"
          data-is-focusable="true"
          fill="#f7630c"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M35.862,-60.116A70,70,0,0,1,69.993,-1L53.991,-1A54,54,0,0,0,27.861,-46.257Z"
          data-is-focusable="true"
          fill="#c50f1f"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-52)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-18"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="24"
            id="tooltip-host17"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div>
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
            />
            <div
              class="fui-legend__text"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
            />
            <div
              class="fui-legend__text"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout20"
    >
      <div
        class="fui-PopoverSurface"
        data-tabster="{\\"restorer\\":{\\"type\\":0}}"
        role="group"
        style="position: fixed; left: 0px; top: 0px; margin: 0px;"
      >
        <div
          class="fui-gc__calloutContentRoot"
        >
          <div
            class="fui-gc__calloutDateTimeContainer"
          >
            <div
              class="fui-gc__calloutContentX"
              data-is-focusable="false"
              role="text"
            >
              Current value is 30/99
            </div>
          </div>
          <div>
            <div
              data-is-focusable="false"
              role="text"
            >
              <div>
                <div
                  class="fui-gc__calloutBlockContainer"
                  id="0_0 - 32"
                  style="border-left: 4px solid #107c10;"
                >
                  <div>
                    <div
                      class="fui-gc__calloutlegendText"
                    >
                       
                      Low Risk
                    </div>
                    <div
                      class="fui-gc__calloutContentY"
                    >
                      0 - 32
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-is-focusable="false"
              role="text"
            >
              <div>
                <div
                  class="fui-gc__calloutBlockContainer"
                  id="1_32 - 66"
                  style="border-left: 4px solid #f7630c;"
                >
                  <div>
                    <div
                      class="fui-gc__calloutlegendText"
                    >
                       
                      Medium Risk
                    </div>
                    <div
                      class="fui-gc__calloutContentY"
                    >
                      32 - 66
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-is-focusable="false"
              role="text"
            >
              <div>
                <div
                  class="fui-gc__calloutBlockContainer"
                  id="2_66 - 99"
                  style="border-left: 4px solid #c50f1f;"
                >
                  <div>
                    <div
                      class="fui-gc__calloutlegendText"
                    >
                       
                      High Risk
                    </div>
                    <div
                      class="fui-gc__calloutContentY"
                    >
                      66 - 99
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gauge chart rendering -  Should render properly with chart title 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Gauge Chart with title. Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
    >
      <g
        transform="translate(126, 113)"
      >
        <text
          aria-hidden="true"
          class="fui-gc__chartTitle"
          text-anchor="middle"
          x="0"
          y="-81"
        >
          Gauge Chart with title
        </text>
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-74"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="74"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-69.993,-1A70,70,0,0,1,-37.752,-58.948L-29.315,-45.35A54,54,0,0,0,-53.991,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-36.052,-60.002A70,70,0,0,1,34.13,-61.116L26.129,-47.257A54,54,0,0,0,-27.616,-46.405Z"
          data-is-focusable="true"
          fill="#f7630c"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M35.862,-60.116A70,70,0,0,1,69.993,-1L53.991,-1A54,54,0,0,0,27.861,-46.257Z"
          data-is-focusable="true"
          fill="#c50f1f"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-52)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-10"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="24"
            id="tooltip-host9"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div>
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
            />
            <div
              class="fui-legend__text"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
            />
            <div
              class="fui-legend__text"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gauge chart rendering -  Should render properly with chart value 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-74"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="74"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-69.993,-1A70,70,0,0,1,-37.752,-58.948L-29.315,-45.35A54,54,0,0,0,-53.991,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-36.052,-60.002A70,70,0,0,1,34.13,-61.116L26.129,-47.257A54,54,0,0,0,-27.616,-46.405Z"
          data-is-focusable="true"
          fill="#f7630c"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M35.862,-60.116A70,70,0,0,1,69.993,-1L53.991,-1A54,54,0,0,0,27.861,-46.257Z"
          data-is-focusable="true"
          fill="#c50f1f"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-52)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-6"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="24"
            id="tooltip-host5"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div>
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
            />
            <div
              class="fui-legend__text"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
            />
            <div
              class="fui-legend__text"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gauge chart rendering -  Should render properly with roundCorners 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-74"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="74"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-66.88,-1A3,3,0,0,1,-69.875,-4.179A70,70,0,0,1,-40.391,-57.171A3,3,0,0,1,-36.111,-56.303L-30.827,-47.788A3,3,0,0,1,-31.62,-43.774A54,54,0,0,0,-53.867,-3.789A3,3,0,0,1,-56.859,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-34.411,-57.357A3,3,0,0,1,-33.289,-61.578A70,70,0,0,1,31.318,-62.603A3,3,0,0,1,32.574,-58.42L27.564,-49.742A3,3,0,0,1,23.652,-48.545A54,54,0,0,0,-25.18,-47.77A3,3,0,0,1,-29.128,-48.842Z"
          data-is-focusable="true"
          fill="#f7630c"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M34.306,-57.42A3,3,0,0,1,38.557,-58.424A70,70,0,0,1,69.875,-4.179A3,3,0,0,1,66.88,-1L56.859,-1A3,3,0,0,1,53.867,-3.789A54,54,0,0,0,30.215,-44.755A3,3,0,0,1,29.296,-48.742Z"
          data-is-focusable="true"
          fill="#c50f1f"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-52)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-14"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="24"
            id="tooltip-host13"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div>
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
            />
            <div
              class="fui-legend__text"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
            />
            <div
              class="fui-legend__text"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gauge chart rendering -  Should render properly without chart value 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-74"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="74"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-69.993,-1A70,70,0,0,1,-37.752,-58.948L-29.315,-45.35A54,54,0,0,0,-53.991,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-36.052,-60.002A70,70,0,0,1,34.13,-61.116L26.129,-47.257A54,54,0,0,0,-27.616,-46.405Z"
          data-is-focusable="true"
          fill="#f7630c"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M35.862,-60.116A70,70,0,0,1,69.993,-1L53.991,-1A54,54,0,0,0,27.861,-46.257Z"
          data-is-focusable="true"
          fill="#c50f1f"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(NaN, 0, 0)"
        >
          <path
            aria-label="Current value: NaN%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -20,-2
            A 2,2,0,0,0,-20,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-52)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-2"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="24"
            id="tooltip-host1"
            text-anchor="middle"
            x="0"
            y="0"
          >
            ...
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div>
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
            />
            <div
              class="fui-legend__text"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
            />
            <div
              class="fui-legend__text"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Screen resolution Should remain unchanged on zoom in 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
      style="width: 300px; height: 276px;"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-98"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="98"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-93.995,-1A94,94,0,0,1,-50.406,-79.342L-39.861,-62.347A74,74,0,0,0,-73.993,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-48.707,-80.397A94,94,0,0,1,46.131,-81.902L36.131,-64.58A74,74,0,0,0,-38.161,-63.401Z"
          data-is-focusable="true"
          fill="#f7630c"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M47.863,-80.902A94,94,0,0,1,93.995,-1L73.993,-1A74,74,0,0,0,37.863,-63.58Z"
          data-is-focusable="true"
          fill="#c50f1f"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -24,-2
            A 2,2,0,0,0,-24,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-72)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-74"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="32"
            id="tooltip-host73"
            text-anchor="middle"
            x="0"
            y="0"
          >
            30%
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div
      style="width: 300px;"
    >
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
            />
            <div
              class="fui-legend__text"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
            />
            <div
              class="fui-legend__text"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Screen resolution Should remain unchanged on zoom out 1`] = `
<div>
  <div
    class="fui-gc__root"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Gauge chart with 3 segments. "
      class="fui-gc__chart"
      role="region"
      style="width: 300px; height: 276px;"
    >
      <g
        transform="translate(126, 88)"
      >
        <text
          aria-label="Min value: 0"
          class="fui-gc__limits"
          role="img"
          text-anchor="end"
          x="-98"
          y="0"
        >
          0
        </text>
        <text
          aria-label="Max value: 99"
          class="fui-gc__limits"
          role="img"
          text-anchor="start"
          x="98"
          y="0"
        >
          99
        </text>
        <path
          aria-label="Low Risk, 0 to 32"
          class="fui-gc__segment"
          d="M-93.995,-1A94,94,0,0,1,-50.406,-79.342L-39.861,-62.347A74,74,0,0,0,-73.993,-1Z"
          data-is-focusable="true"
          fill="#107c10"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="Medium Risk, 32 to 66"
          class="fui-gc__segment"
          d="M-48.707,-80.397A94,94,0,0,1,46.131,-81.902L36.131,-64.58A74,74,0,0,0,-38.161,-63.401Z"
          data-is-focusable="true"
          fill="#f7630c"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <path
          aria-label="High Risk, 66 to 99"
          class="fui-gc__segment"
          d="M47.863,-80.902A94,94,0,0,1,93.995,-1L73.993,-1A74,74,0,0,0,37.863,-63.58Z"
          data-is-focusable="true"
          fill="#c50f1f"
          opacity="1"
          role="img"
          stroke-width="0"
          tabindex="0"
        />
        <g
          transform="rotate(54.54545454545455, 0, 0)"
        >
          <path
            aria-label="Current value: 30%"
            class="fui-gc__needle"
            d="
            M 0,-4
            L -24,-2
            A 2,2,0,0,0,-24,2
            L 0,4
            A 4,4,0,0,0,0,-4
          "
            data-is-focusable="true"
            role="img"
            stroke-width="2"
            transform="translate(-72)"
          />
        </g>
        <g>
          <text
            aria-describedby="tooltip-78"
            aria-hidden="true"
            class="fui-gc__chartValue"
            font-size="32"
            id="tooltip-host77"
            text-anchor="middle"
            x="0"
            y="0"
          >
            30%
          </text>
          <span
            hidden=""
          />
        </g>
      </g>
    </svg>
    <div
      style="width: 300px;"
    >
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="Low Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #107c10; --rect-borderColor: #107c10;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(16, 124, 16); border-color: #107c10; --rect-content-high-contrast: linear-gradient(to right, #107c10, #107c10);"
            />
            <div
              class="fui-legend__text"
            >
              Low Risk
            </div>
          </button>
          <button
            aria-label="Medium Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #f7630c; --rect-borderColor: #f7630c;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(247, 99, 12); border-color: #f7630c; --rect-content-high-contrast: linear-gradient(to right, #f7630c, #f7630c);"
            />
            <div
              class="fui-legend__text"
            >
              Medium Risk
            </div>
          </button>
          <button
            aria-label="High Risk"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #c50f1f; --rect-borderColor: #c50f1f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(197, 15, 31); border-color: #c50f1f; --rect-content-high-contrast: linear-gradient(to right, #c50f1f, #c50f1f);"
            />
            <div
              class="fui-legend__text"
            >
              High Risk
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
